--- a/src/index.css
+++ b/src/index.css
@@ -142,8 +142,8 @@ button {
 body {
   background: var(--black);
   color: var(--white);
-  font-family: sans-serif, 'Rubik', system-ui, 'Segoe UI', 'Open Sans',
-    'Helvetica Neue';
+  font-family: 'EB Garamond', serif, system-ui, sans-serif, 'Rubik', 'Segoe UI',
+    'Open Sans', 'Helvetica Neue';
   font-weight: 400;
   line-height: 1;
   transition: var(--transition);
@@ -213,6 +213,7 @@ ul {
 .btn {
   background-color: #f1ebc5;
   border: none;
+  font-family: 'EB Garamond';
   padding: 0.45rem 2rem;
   width: fit-content;
   border-radius: 0.3rem;
@@ -342,18 +343,18 @@ button:disabled {
 .title {
   margin-bottom: 2rem;
   text-align: left;
-  font-family: 'Rama Gothic M', sans-serif !important;
+  /* font-family: 'Rama Gothic M', sans-serif !important; */
   font-weight: bold;
   text-transform: uppercase;
 }
 .title-extra {
-  font-size: 4.375rem;
+  font-size: 3.2rem;
 }
 .title-big {
-  font-size: 3.75rem;
+  font-size: 2.9rem;
 }
 .title-medium {
-  font-size: 3.125rem;
+  font-size: 2.6rem;
 }
 
 .title-underline {
