--- a/src/index.css
+++ b/src/index.css
@@ -215,7 +215,7 @@ ul {
   border: none;
   font-family: 'EB Garamond';
   padding: 0.45rem 2rem;
-  width: fit-content;
+  min-width: fit-content;
   border-radius: 0.3rem;
   font-weight: bold;
   font-size: 0.9rem;
@@ -225,6 +225,7 @@ ul {
   transition: var(--transition);
   text-transform: uppercase;
   /* font-family: 'Rama Gothic M'; */
+  white-space: nowrap;
 }
 
 .btn:hover {
@@ -409,16 +410,21 @@ button:disabled {
   }
 }
 
+@media (max-width: 48rem) {
+  .title-medium {
+    font-size: 2rem;
+  }
+}
 @media (max-width: 44rem) {
   .btn {
-    font-size: 1rem;
-    padding: 0.35rem 1rem;
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
     width: 7rem;
   }
 }
 @media (max-width: 36rem) {
   .btn {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     padding: 0.3rem 0.6rem;
     width: 6rem;
   }
@@ -430,7 +436,7 @@ button:disabled {
 @media (max-width: 27rem) {
   .btn {
     /* font-size: 0.7rem; */
-    padding: 0.3rem 0.2rem;
+    padding: 0.3rem 0.5rem;
     width: 5rem;
   }
   .title-medium {
